--- a/public/css/album.css
+++ b/public/css/album.css
@@ -38,3 +38,13 @@
     margin-bottom: .25rem;
   }
   
+  img {
+    max-width: 50%;
+    height: auto;
+    }
+  
+  video {
+    position: relative;
+    max-width: 50%;
+    height: auto;
+  }
